# jemalloc-cmake

./: CMakeLists.txt  CMake_configure.cmd  CMake_configure14.cmd  Makefile.in  Utilities.cmake
include/jemalloc/: jemalloc_macros.h.in
include/jemalloc/internal/: jemalloc_internal.h.in  jemalloc_internal_decls.h  jemalloc_internal_defs.h.in  private_symbols.txt
include/msvc_compat/: strings.h
src/: arena.c  chunk.c  ctl.c  huge.c  jemalloc.c  tsd.c
test/src/: CMakeLists.txt
test/stress/: CMakeLists.txt
